--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,18 @@
     transform: rotate(360deg);
   }
 }
+
+table {
+  border-collapse: collapse;
+  width: 60%;
+  margin: 20px auto;
+}
+th,
+td {
+  border: 1px solid #999;
+  padding: 8px 12px;
+  text-align: center;
+}
+th {
+  background-color: #f2f2f2;
+}
